--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"format": "npm run prettier -- --write",
 		"check-format": "npm run prettier -- --list-different",
 		"lint": "eslint src/**",
-		"validate": ""
+		"validate": "npm run format && npm run lint && npm run test"
 	},
 	"eslintConfig": {
 		"extends": [
