--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "react-scripts build",
 		"eject": "react-scripts eject",
 		"setup": "npm install && npm run dev",
+		"prepare": "husky install",
 		"test": "cross-env CI=true react-scripts test",
 		"test:dev": "react-scripts test --silent=false",
 		"test:coverage": "cross-env CI=true react-scripts test --coverage",
