--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"format": "npm run prettier -- --write",
 		"check-format": "npm run prettier -- --list-different",
 		"lint": "eslint src/**",
-		"validate": "npm run format && npm run lint && npm run test"
+		"validate": "npm run format && npm run lint && npm run test",
+		"deploy-storybook": "storybook-to-ghpages"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -77,6 +78,7 @@
 		"@storybook/node-logger": "^6.5.16",
 		"@storybook/preset-create-react-app": "^4.1.2",
 		"@storybook/react": "^6.5.16",
+		"@storybook/storybook-deployer": "^2.8.16",
 		"@storybook/testing-library": "^0.0.13",
 		"@testing-library/react": "^13.4.0",
 		"babel-plugin-named-exports-order": "^0.0.2",
