--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"prettier": "prettier --ignore-path .gitignore \"**/*.+(js|jsx)\"",
 		"format": "npm run prettier -- --write",
 		"check-format": "npm run prettier -- --list-different",
-		"lint": "eslint src/** --ext js --ext jsx",
+		"lint": "eslint \"**/*.{js,jsx}\"",
 		"validate": "npm run format && npm run lint && npm run test",
 		"deploy-storybook": "storybook-to-ghpages"
 	},
