--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,7 +20,7 @@ jobs:
           cache-dependency-path: "**/package-lock.json"
       - run: npm ci
       - run: npm run validate
-      - run: npm run build
+      - run: npm run sb:build
 
       - name: Deploy Storybook
         run:
