--- a/.github/workflows/deploy-page.yml
+++ b/.github/workflows/deploy-page.yml
@@ -1,4 +1,4 @@
-name: Deploy Docs
+name: Deploy Page
 
 on:
   push:
@@ -21,11 +21,7 @@ jobs:
       - run: npm ci
       - run: npm run validate
       - run: npm run build
-
-      - name: Deploy to frontend-architecture-basic-example.surge.sh
-        uses: dswistowski/surge-sh-action@v1
-        with:
-          domain: "frontend-architecture-basic-example.surge.sh"
-          project: "./build"
-          login: ${{ secrets.SURGE_LOGIN }}
-          token: ${{ secrets.SURGE_TOKEN }}
+      - run: npm install -g surge
+      - run:
+          surge ./build ${{ secrets.SURGE_DOMAIN }} --token ${{
+          secrets.SURGE_TOKEN }}
